Another fix to featured products broken layout

--- a/assets/css/_flex.scss
+++ b/assets/css/_flex.scss
@@ -160,6 +160,7 @@ px
     padding: 3em 2em 2em;
 	position: relative;
 	justify-content: space-between;
+	width: 100%;
 }
 
 .align-middle {
